MAT-18144 Endret landmålernummer til Long