@@ -14,9 +14,9 @@ public class LandmalerregisterUtil {
      *
      * @return Søkeparametere for request-strengen
      */
-    public static String validateAndBuildUrlParameters(String landmalernr, String fornavn, String etternavn) {
+    public static String validateAndBuildUrlParameters(Long landmalernr, String fornavn, String etternavn) {
         // hvis alt er blankt
-        if (Stream.of(landmalernr, fornavn, etternavn).allMatch(s -> s == null || s.isBlank())) {
+        if (landmalernr == null && Stream.of(fornavn, etternavn).allMatch(s -> s == null || s.trim().isEmpty())) {
             throw new ValidationException("Søk i Landmålerregister inneholder bare tomme felter.");
         }
 
@@ -24,12 +24,12 @@ public class LandmalerregisterUtil {
     }
 
     // bygg en url med de parameterene som er angitt
-    private static String buildUrlParameters(String landmalernr, String fornavn, String etternavn) {
+    private static String buildUrlParameters(Long landmalernr, String fornavn, String etternavn) {
 
         // sjekk hva som er fylt ut
-        boolean landmalerUtfylt = landmalernr != null && !landmalernr.isBlank();
-        boolean fornavnUtfylt = fornavn != null && !fornavn.isBlank();
-        boolean etternavnUtfylt = etternavn != null && !etternavn.isBlank();
+        boolean landmalerUtfylt = landmalernr != null;
+        boolean fornavnUtfylt = fornavn != null && !fornavn.trim().isEmpty();
+        boolean etternavnUtfylt = etternavn != null && !etternavn.trim().isEmpty();
 
         StringBuilder urlBuilder = new StringBuilder();
         urlBuilder.append("?");
